[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/wasmbind-mermaid",
    "projects/yew-mermaid",
    "projects/yew-mermaid-preview",
]
exclude = ["projects/.DS_Store"]

[workspace.dependencies]
yew = { version = "0.21.0", features = ["csr"] }

[profile.release]
lto = true

[patch.crates-io]
yew = { git = "https://github.com/yewstack/yew" }
