[package]
name = "mermaid-wasmbind"
version = "0.1.0"
description = "KaTeX Render for wasm bind"
edition = "2021"
readme = "Readme.md"
repository = "https://github.com/eltorocorp/yew-mermaid"
include = ["/src/**/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde-wasm-bindgen = "0.6.1"

[dependencies.wasm-bindgen]
version = "0.2"
# features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = ["Element"]

[dev-dependencies]
wasm-bindgen-test = "0.3.39"
