[package]
name = "yew-mermaid-preview"
publish = false
version = "0.1.0"
readme = "../../Readme.md"
edition = "2018"

[dependencies]
yew = "0.21"
yew-mermaid = { version = "0.2", path = "../yew-mermaid" }
web-sys = { version = "0.3.66", features = ["Window", "Document"] }

[patch.crates-io]
yew = { git = "https://github.com/yewstack/yew" }
