[package]
name = "yew-mermaid"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/GalAster/yew-mermaid.js"
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2021"

[features]
default = []

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
mermaid-wasmbind = { version = "0.1", path = "../wasmbind-mermaid" }
gloo-utils = "0.2.0"
web-sys = { version = "0.3.66", features = ["Window", "Document"] }

[patch.crates-io]
yew = { git = "https://github.com/yewstack/yew" }
